# management/server/http/api/openapi.yml
@@ -454,36 +454,38 @@ components:
       type: object
       properties:
         id:
-          description: Rule ID
+          description: Policy rule ID
           type: string
         name:
-          description: Rule name identifier
+          description: Policy rule name identifier
           type: string
         description:
-          description: Rule friendly description
+          description: Policy rule friendly description
           type: string
         enabled:
-          description: Rule status
+          description: Policy rule status
           type: boolean
         action:
-          description: Rule accept or drops packets
+          description: Policy rule accept or drops packets
           type: string
           enum: ["accept","drop"]
-        flow:
-          description: Rule flow, "bidirect" or "direct"
-          type: string
+        bidirect:
+          description: Policy rule allows connection in both directions
+          type: boolean
         protocol:
-          description: Rule type of the traffic
+          description: Policy rule type of the traffic
           type: string
           enum: ["all", "tcp", "udp", "icmp"]
         ports:
-          description: Rule affected ports or it ranges list
+          description: Policy rule affected ports or it ranges list
           type: array
           items:
             type: string
       required:
         - name
         - enabled
+        - bidirect
+        - protocol
         - action
     PolicyRuleUpdate:
       allOf:
